# st-workspaces

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  resource.rc
assets/: resource.rc
src/: app.rs  lib.rs  main.rs  open_tabs.rs  paths.rs  sourcetree_actions.rs  workspaces.rs
