[package]
name = "st-workspaces"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.69"
directories = "4.0.1"
eframe = "0.21.3"
egui = "0.21.0"
flexi_logger = "0.25.4"
log = "0.4.17"
serde = { version = "1.0.154", features = ["derive"] }
serde-xml-rs = "0.6.0"
serde_json = "1.0.94"
tracing-subscriber = "0.3.16"
uuid = { version = "1.3.0", features = ["serde", "v4"] }
